<resources>
    <string name="app_name">testApplt</string>
    <string name="search">Поиск</string>
    <string name="bookWillBeFind">Нужная книга всегда найдётся</string>
    <string name="filtersTittle">Параметры поиска</string>
    <string name="searchParamsTittle">Уточните параметры, по которым искать книги</string>
    <string name="searchForAll">Поиск по всему</string>
    <string name="searchForAuthor">Поиск по автору</string>
    <string name="searchForName">Поиск по названию</string>
    <string name="searchForSubject">Поиск по жанру</string>
    <string name="searchForPublisher">Поиск по издателю</string>
    <string name="retry">Повторить</string>
    <string name="notLoaded">Не удалось загрузить</string>
</resources>